--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -332,4 +332,14 @@
     <string name="this_is_pro">这是一项高级功能</string>
     <string name="shop_custom_bg">更换壁纸</string>
     <string name="shop_custom_bg_desc">从图库中选择壁纸</string>
+    <string name="change_bg_dialog_pick_button">选择背景</string>
+    <string name="change_bg_dialog_reset_button">重置背景</string>
+    <string name="change_bg_dialog_desc">背景将与当前主题一起应用</string>
+    <string name="change_bg_dialog_title">更改背景</string>
+    <string name="white_theme_name">白</string>
+    <string name="starry_theme_name">星空（动画）</string>
+    <string name="midnight_theme_name">午夜星星（动画）</string>
+    <string name="blurry_theme_name">模糊</string>
+    <string name="retrowave_theme_name">复古</string>
+    <string name="energetic_theme_name">精力充沛</string>
 </resources>
