Refactored purchase activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -351,7 +351,7 @@
 
     <string name="shop_title">Unlock Everything</string>
     <string name="shop_sub">Pro pack unlocks all themes, pro features and supports development.</string>
-    <string name="shop_desc0">No Ads Ever</string>
+    <string name="shop_desc0">No Ads</string>
     <string name="shop_sub0">This app isn\'t ad supported and aims to stay that way. Pro version will always be ad free.</string>
     <string name="shop_desc1">All Themes</string>
     <string name="shop_sub1">Animated starry night, blurry, energetic and more!</string>
