Refactored MoreFragment - Removed unused code - Refactored and improved fragment layout - Restructured dialog boxes for player, theme and wallpaper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -357,4 +357,12 @@
         <item>@string/playlists</item>
         <item>@string/more</item>
     </string-array>
+
+    <string-array name="more_array">
+        <item>@string/settings</item>
+        <item>@string/folders</item>
+        <item>@string/settings_change_player</item>
+        <item>@string/settings_change_theme</item>
+        <item>@string/settings_change_background</item>
+    </string-array>
 </resources>
